Fix error message overflow (fixes #20)

--- a/src/Components/Box/Box.module.sass
+++ b/src/Components/Box/Box.module.sass
@@ -1,5 +1,5 @@
-@use "Assets/dimensions.sass"
 @use "Assets/colors.sass"
+@use "Assets/dimensions.sass"
 
 .box
     padding: 22px 22px
@@ -21,3 +21,6 @@
     &Primary
         background-color: colors.$background-primary
         color: colors.$text-primary
+
+    &LargeRadius
+        border-radius: dimensions.$border-radius-large
