--- a/src/Components/MessageBox/MessageBox.module.sass
+++ b/src/Components/MessageBox/MessageBox.module.sass
@@ -1,5 +1,17 @@
 @use "Assets/colors.sass"
+@use "Assets/fonts.sass"
 
 .box
     color: colors.$text-on-color
-    width: 240px
+    width: 280px
+    padding: 0
+
+.bar
+    padding: 14px 16px 6px
+    font-weight: fonts.$weight-bold
+
+.text
+    max-width: 100%
+    word-wrap: break-word
+    padding: 0 16px 20px
+    margin-left: 36px
